# Bookmarker

./: .editorconfig  .env.sample  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  pyproject.toml
bookmarker/: __init__.py  __main__.py
bookmarker/config/: default.py  utils.py
bookmarker/db/connection/: session.py
bookmarker/db/enums/: __init__.py  bookmark.py
bookmarker/db/migrator/: env.py
bookmarker/db/migrator/versions/: 2022-08-01_e4aa3eebebf7_initial.py
bookmarker/db/models/: __init__.py  base.py  bookmark.py  tag.py  user.py
bookmarker/endpoints/: __init__.py  auth.py  bookmark.py  ping.py
bookmarker/schemas/: __init__.py
bookmarker/schemas/auth/: registration.py  user.py
bookmarker/schemas/bookmark/: bookmark.py
bookmarker/utils/bookmark/: __init__.py  database.py  get_title.py
bookmarker/utils/common/: __init__.py
bookmarker/utils/user/: __init__.py  business_logic.py  database.py
